<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_mapa" />

    <item
        android:id="@+id/navigation_google"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_google" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/common_google_signin_btn_text_dark"
        android:title="@string/title_weather"/>

    <item
        android:id="@+id/navigation_database"
        android:title="@string/title_database"
        android:icon="@drawable/ic_dns_black"/>

</menu>
